Upgraded to jersey 1.5 * Removed core and client from server. core and client is now exposed from com.dynamo.cr.common

--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -2,10 +2,8 @@ source.. = src/,generated/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               ext/jersey-client-1.3.jar,\
                DYNAMO_HOME/ext/share/java/protobuf-java-2.3.0.jar,\
                ext/jsr311-api-1.1.1.jar,\
-               ext/jersey-core-1.3.jar,\
                ext/httpcore-4.0.1.jar,\
                ext/httpclient-4.0.1.jar,\
                DYNAMO_HOME/share/java/ddf.jar,\
@@ -13,4 +11,6 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/gameobject.jar,\
                DYNAMO_HOME/share/java/gamesys.jar,\
                DYNAMO_HOME/share/java/input.jar,\
-               DYNAMO_HOME/share/java/particle.jar
+               DYNAMO_HOME/share/java/particle.jar,\
+               ext/jersey-client-1.5.jar,\
+               ext/jersey-core-1.5.jar
