--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -4,11 +4,14 @@ bin.includes = META-INF/,\
                .,\
                ext/asm-3.1.jar,\
                ext/grizzly-servlet-webserver-1.9.18-k.jar,\
+               ext/jersey-client-1.3-sources.jar,\
+               ext/jersey-client-1.3.jar,\
+               ext/jersey-core-1.3.jar,\
+               ext/jersey-server-1.3.jar,\
                ext/jsr250-api-1.0.jar,\
                ext/jsr311-api-1.1.1.jar,\
                plugin.xml,\
                test_data/,\
                scripts/,\
                ext/derby.jar,\
-               ext/postgresql-9.0-801.jdbc4.jar,\
-               ext/jersey-server-1.5.jar
+               ext/postgresql-9.0-801.jdbc4.jar
