Login and create user/project in website (#315) * Web features  - Signup  - New project with template support  - Add member  - Dashboard * New connection scheme. URI to cr is does not include project. The connection dialog now has two phases. First project then branch selection * New resource for "projects", ProjectsResource and IProjectsClient * Added EntityManager to Server-method. We need to ensure that we use a single entity-manager * Role support * User and admin roles supported * User model now has connections to other users * Added members, created, lastUpdated and description to Project-model * Added new test project com.dynamo.cr.common.test * Added commons-io, commons-lang and jackson to common * Added json support for REST-services with automatic conversion from and to protobuf messages (currently disabled) * Added tests for new resource (ProjectsResource) * Added tests for user resource * Added new repository resource * Serialization wrapper for protobuf messages (SerializableMessage). Wicket requires a classes to be serializable

--- a/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr.common/.classpath
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ext/commons-io-2.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/jackson-core-asl-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/jackson-mapper-asl-1.7.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/commons-lang3-3.0-beta.jar"/>
 	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/particle.jar"/>
 	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/input.jar"/>
 	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/gameobject.jar"/>
