--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -13,4 +13,8 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/gameobject.jar,\
                DYNAMO_HOME/share/java/gamesys.jar,\
                DYNAMO_HOME/share/java/input.jar,\
-               DYNAMO_HOME/share/java/particle.jar
+               DYNAMO_HOME/share/java/particle.jar,\
+               ext/commons-lang3-3.0-beta.jar,\
+               ext/jackson-core-asl-1.7.1.jar,\
+               ext/jackson-mapper-asl-1.7.1.jar,\
+               ext/commons-io-2.0.1.jar
