--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -20,3 +20,9 @@ RebuildCommand: {
 }
 
 ExeCommand: {}
+
+ProjectTemplates {
+    id: "proj1"
+    path: "tmp/templates/proj1"
+    description: "Project 1"
+}
