--- a/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr.server/config/chmu.config
@@ -3,7 +3,7 @@ Filters: ".*?\\.git"
 ServicePort: 9998
 BuildDataPort: 6000
 PersistenceUnitName: "unit-test"
-RepositoryRoot: "/Users/chmu/Projects/dynamo"
+RepositoryRoot: "/Users/chmu/Projects/dynamo/test_repos"
 ProgressRe: "\\[(\\d+)/(\\d+)\\]"
 
 ConfigureCommand: {
@@ -23,4 +23,10 @@ ExeCommand: {
   Args: "{executable}"
   Args: "--config=resource.uri=http://localhost:6000/{project}/{user}/{branch}/build/default/content"
   Args: "http://localhost:6000/{project}/{user}/{branch}/build/default/content/game.projectc"
+}
+
+ProjectTemplates {
+    id: "demos"
+    path: "/Users/chmu/Projects/dynamo/demos"
+    description: "Cool dynamo demos"
 }
