--- a/com.dynamo.cr.common/.project
+++ b/com.dynamo.cr.common/.project
@@ -43,7 +43,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1286919485269</id>
+			<id>1296580591708</id>
 			<name>DYNAMO_HOME</name>
 			<type>22</type>
 			<matcher>
@@ -52,12 +52,21 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1286919485271</id>
+			<id>1296580591711</id>
 			<name>DYNAMO_HOME</name>
 			<type>22</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-*.cpp</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1296580591715</id>
+			<name>DYNAMO_HOME</name>
+			<type>22</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.proto</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
