--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -11,15 +11,17 @@
         <repository>
             <id>helios</id>
             <layout>p2</layout>
-            <url>http://download.eclipse.org/eclipse/updates/3.6</url>
-            <!-- <url>http://download.eclipse.org/releases/helios</url> -->
+            <url>http://download.eclipse.org/releases/helios</url>
         </repository>
 
+        <!--
+        We currently don't want the latest version. Had some problems with 2.2.0 (api changes)
+        We use a released version from release/helios instead. See above
         <repository>
             <id>eclipselink</id>
             <layout>p2</layout>
             <url>http://download.eclipse.org/rt/eclipselink/updates/</url>
-        </repository>
+        </repository> -->
 
     </repositories>
 
