Moved wizard category in ddf to cr.editor. ddfeditor is not explicitly dependent on cr.editor (only the category id)

--- a/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr.editor/plugin.xml
@@ -241,5 +241,14 @@
             sequence="M1+R">
       </key>
    </extension>
+   <extension
+         id="com.dynamo.cr.newwizards"
+         name="Content"
+         point="org.eclipse.ui.newWizards">
+      <category
+            id="com.dynamo.cr.editor.wizardCategory"
+            name="Content">
+      </category>
+   </extension>
 
 </plugin>
