--- a/com.dynamo.cr.luaeditor/plugin.xml
+++ b/com.dynamo.cr.luaeditor/plugin.xml
@@ -23,5 +23,13 @@
             name="Script file">
       </wizard>
    </extension>
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <commonWizard
+            type="new"
+            wizardId="com.dynamo.cr.luaeditor.newScriptWizard">
+         <enablement></enablement>
+      </commonWizard>
+   </extension>
 
 </plugin>
