VertexConstants and FragmentConstants can't be added to materials in the ddf editor #350

--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -367,6 +367,7 @@
             template-data="Font: '' Material: '' Size: 15">
       </resource-type>
       <resource-type
+            edit-support-class="com.dynamo.cr.ddfeditor.resourcetypes.MaterialEditSupport"
             file-extension="material"
             id="com.dynamo.cr.ddfeditor.resourcetypes.Material"
             name="Material"
