Previewing of fonts in font-editor #353 * Use font compiler from render * Added missing removeOperationHistoryListener in dispose() * Added fontc.jar to cr.common * Added preview support to DdfEditor

--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -17,4 +17,5 @@ bin.includes = META-INF/,\
                ext/commons-lang3-3.0-beta.jar,\
                ext/jackson-core-asl-1.7.1.jar,\
                ext/jackson-mapper-asl-1.7.1.jar,\
-               ext/commons-io-2.0.1.jar
+               ext/commons-io-2.0.1.jar,\
+               DYNAMO_HOME/share/java/fontc.jar
