Fixed forgotten lower case (again!).

--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -1,27 +1,27 @@
-BranchRoot: "tmp/branch_root"
-Filters: ".*?\\.git"
-ServicePort: 6500
-BuildDataPort: 6001
-PersistenceUnitName: "unit-test"
-RepositoryRoot: "tmp/test_data"
-ProgressRe: "\\[(\\d+)/(\\d+)\\]"
+branch_root: "tmp/branch_root"
+filters: ".*?\\.git"
+service_port: 6500
+build_data_port: 6001
+persistence_unit_name: "unit-test"
+repository_root: "tmp/test_data"
+progress_re: "\\[(\\d+)/(\\d+)\\]"
 
-ConfigureCommand: {
-  Args: "waf"
-  Args: "configure"
+configure_command: {
+  args: "waf"
+  args: "configure"
 }
 
-BuildCommand: {
-  Args: "waf"
+build_command: {
+  args: "waf"
 }
 
-RebuildCommand: {
-  Args: "waf" Args: "clean" Args: "build"
+rebuild_command: {
+  args: "waf" args: "clean" args: "build"
 }
 
-ExeCommand: {}
+exe_command {}
 
-ProjectTemplates {
+project_templates {
     id: "proj1"
     path: "tmp/templates/proj1"
     description: "Project 1"
