--- a/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr.server/config/chmu.config
@@ -1,31 +1,31 @@
-BranchRoot: "/tmp/br"
-Filters: ".*?\\.git"
-ServicePort: 9998
-BuildDataPort: 6000
-PersistenceUnitName: "unit-test"
-RepositoryRoot: "/Users/chmu/Projects/dynamo/test_repos"
-ProgressRe: "\\[(\\d+)/(\\d+)\\]"
+branch_root: "/tmp/br"
+filters: ".*?\\.git"
+service_port: 9998
+build_data_port: 6000
+persistence_unit_name: "unit-test"
+repository_root: "/Users/chmu/Projects/dynamo/test_repos"
+progress_re: "\\[(\\d+)/(\\d+)\\]"
 
-ConfigureCommand: {
-  Args: "waf"
-  Args: "configure"
+configure_command: {
+  args: "waf"
+  args: "configure"
 }
 
-BuildCommand: {
-  Args: "waf"
+build_command: {
+  args: "waf"
 }
 
-RebuildCommand: {
-  Args: "waf" Args: "clean" Args: "build"
+rebuild_command: {
+  args: "waf" args: "clean" args: "build"
 }
 
-ExeCommand: {
-  Args: "{executable}"
-  Args: "--config=resource.uri=http://localhost:6000/{project}/{user}/{branch}/build/default/content"
-  Args: "http://localhost:6000/{project}/{user}/{branch}/build/default/content/game.projectc"
+exe_command: {
+  args: "{executable}"
+  args: "--config=resource.uri=http://localhost:6000/{project}/{user}/{branch}/build/default/content"
+  args: "http://localhost:6000/{project}/{user}/{branch}/build/default/content/game.projectc"
 }
 
-ProjectTemplates {
+project_templates {
     id: "demos"
     path: "/Users/chmu/Projects/dynamo/demos"
     description: "Cool dynamo demos"
