--- a/com.dynamo.cr.server/config/jetbot.config
+++ b/com.dynamo.cr.server/config/jetbot.config
@@ -1,37 +1,37 @@
-BranchRoot: "/tmp/br"
-Filters: ".*?\\.git"
-ServicePort: 9998
-BuildDataPort: 6000
+branch_root: "/tmp/br"
+filters: ".*?\\.git"
+service_port: 9998
+build_data_port: 6000
 
 projects {
-  Id: "jetbot"
-  Name: "Jetbot"
-  Root: "/home/ragnar/dynamo/jetbot"
-  ProgressRe: "\\[(\\d+)/(\\d+)\\]"
+  id: "jetbot"
+  name: "Jetbot"
+  root: "/home/ragnar/dynamo/jetbot"
+  progress_re: "\\[(\\d+)/(\\d+)\\]"
 
-  Applications: {
-    Platform: "darwin"
-    Name: "jetbot"
-    Path: "/Users/chmu/Projects/dynamo/jetbot/build/default/src/jetbot"
+  applications: {
+    platform: "darwin"
+    name: "jetbot"
+    path: "/Users/chmu/Projects/dynamo/jetbot/build/default/src/jetbot"
   }
 
-  ConfigureCommand: {
-    Args: "waf"
-    Args: "configure"
+  configure_command: {
+    args: "waf"
+    args: "configure"
   }
 
-  BuildCommand: {
-    Args: "waf"
+  build_command: {
+    args: "waf"
   }
 
-  RebuildCommand: {
-    Args: "waf" Args: "clean" Args: "build"
+  rebuild_command: {
+    args: "waf" args: "clean" args: "build"
   }
 
-  ExeCommand: {
-    Args: "{executable}"
-    Args: "--config=resource.uri=http://localhost:6000/jetbot/{user}/{branch}/build/default/content"
-    Args: "http://localhost:6000/jetbot/{user}/{branch}/build/default/content/game.projectc"
+  exe_command: {
+    args: "{executable}"
+    args: "--config=resource.uri=http://localhost:6000/jetbot/{user}/{branch}/build/default/content"
+    args: "http://localhost:6000/jetbot/{user}/{branch}/build/default/content/game.projectc"
   }
 }
 
