--- a/com.dynamo.cr.server/test_data/crepo_test.config
+++ b/com.dynamo.cr.server/test_data/crepo_test.config
@@ -1,52 +1,52 @@
-BranchRoot: "tmp/branch_root"
-Filters: ".*?\\.git"
-ServicePort: 6500
-BuildDataPort: 6001
+branch_root: "tmp/branch_root"
+filters: ".*?\\.git"
+service_port: 6500
+build_data_port: 6001
 
 projects {
-  Id: "proj1"
-  Name: "Project 1"
-  Root: "tmp/test_data/proj1"
+  id: "proj1"
+  name: "Project 1"
+  root: "tmp/test_data/proj1"
 
-  ProgressRe: "\\[(\\d+)/(\\d+)\\]"
+  progress_re: "\\[(\\d+)/(\\d+)\\]"
 
-  ConfigureCommand: {
-    Args: "waf"
-    Args: "configure"
+  configure_command: {
+    args: "waf"
+    args: "configure"
   }
 
-  BuildCommand: {
-    Args: "waf"
+  build_command: {
+    args: "waf"
   }
 
-  RebuildCommand: {
-    Args: "waf" Args: "clean" Args: "build"
+  rebuild_command: {
+    args: "waf" args: "clean" args: "build"
   }
 
-  ExeCommand: {}
+  exe_command: {}
 
 }
 
 projects {
-  Id: "proj2"
-  Name: "Project 2"
-  Root: "tmp/test_data/proj2"
+  id: "proj2"
+  name: "Project 2"
+  root: "tmp/test_data/proj2"
 
-  ProgressRe: "\\[(\\d+)/(\\d+)\\]"
+  progress_re: "\\[(\\d+)/(\\d+)\\]"
 
-  ConfigureCommand: {
-    Args: "waf"
-    Args: "configure"
+  configure_command: {
+    args: "waf"
+    args: "configure"
   }
 
-  BuildCommand: {
-    Args: "waf"
+  build_command: {
+    args: "waf"
   }
 
-  RebuildCommand: {
-    Args: "waf" Args: "clean" Args: "build"
+  rebuild_command: {
+    args: "waf" args: "clean" args: "build"
   }
 
-  ExeCommand: {}
+  exe_command: {}
 
 }
