Added support for builtins directory and creation of symbolic link when creating branches.

--- a/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr.server/config/chmu.config
@@ -5,6 +5,7 @@ build_data_port: 6000
 persistence_unit_name: "unit-test"
 repository_root: "/Users/chmu/Projects/dynamo/test_repos"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
+builtins_directory: "/Users/chmu/tmp/dynamo-home/content/builtins"
 
 configure_command: {
   args: "waf"
