--- a/com.dynamo.cr.editor.core/plugin.xml
+++ b/com.dynamo.cr.editor.core/plugin.xml
@@ -2,5 +2,50 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="com.dynamo.cr.resourcetypes" name="Resource Types" schema="schema/com.dynamo.cr.resourcetypes.exsd"/>
+   <extension
+         point="org.eclipse.ltk.core.refactoring.moveParticipants">
+      <moveParticipant
+            class="com.dynamo.cr.editor.core.internal.refactoring.ResourceMoveParticipant"
+            id="com.dynamo.cr.editor.core.internal.refactoring.ResourceMoveParticipant"
+            name="Resource Move Participant">
+         <enablement>
+            <with variable="affectedNatures">
+                <iterate operator="or">
+                    <equals value="com.dynamo.cr.editor.crnature"/>
+                </iterate>
+            </with>
+         </enablement>
+      </moveParticipant>
+   </extension>
+   <extension
+         point="org.eclipse.ltk.core.refactoring.renameParticipants">
+      <renameParticipant
+            class="com.dynamo.cr.editor.core.internal.refactoring.ResourceRenameParticipant"
+            id="com.dynamo.cr.editor.core.internal.refactoring.ResourceRenameParticipant"
+            name="Resource Rename Participant">
+         <enablement>
+            <with variable="affectedNatures">
+                <iterate operator="or">
+                    <equals value="com.dynamo.cr.editor.crnature"/>
+                </iterate>
+            </with>
+         </enablement>
+      </renameParticipant>
+   </extension>
+   <extension
+         point="org.eclipse.ltk.core.refactoring.deleteParticipants">
+      <deleteParticipant
+            class="com.dynamo.cr.editor.core.internal.refactoring.ResourceDeleteParticipant"
+            id="com.dynamo.cr.editor.core.internal.refactoring.ResourceDeleteParticipant"
+            name="Resource Delete Participant">
+         <enablement>
+            <with variable="affectedNatures">
+                <iterate operator="or">
+                    <equals value="com.dynamo.cr.editor.crnature"/>
+                </iterate>
+            </with>
+         </enablement>
+      </deleteParticipant>
+   </extension>
 
 </plugin>
